--- a/style/style.css
+++ b/style/style.css
@@ -5,3 +5,49 @@ body{
 main{
     background-image: url("../images/img_bg_1.jpg");
 }
+.section{
+    padding: 0 5%;
+}
+.logo{
+    padding-top: 50px;
+}
+main .logo a{
+    /* text */
+    font-family: "Work Sans", Arial, sans-serif;
+    text-decoration: none;
+    color: #fff;
+    font-size: 25px;
+    font-weight: bold;
+    /* logo */
+    border: solid #e36464;
+}
+main .logo div{
+    display: flex;
+    justify-content: center;  
+}
+.main_text{
+    font-family: "Work Sans", Arial, sans-serif;
+    font-size: 60px;
+    font-weight: 100;
+    line-height: 1.5;
+    color: #fff;
+
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;  
+}
+.main_p{
+    font-family: "Work Sans", Arial, sans-serif;
+    font-size: 20px;
+    font-weight: 100;
+    line-height: 1.5;
+    color: #fff;
+
+    margin-top: 50px;
+    display: flex;
+    justify-content: center; 
+}
+.main_p span{
+    color: #e36464;
+    padding-left: 5px;
+}
