--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,19 @@ body{
     padding: 0;
 }
 main{
+    position: relative;
+    z-index: 0;
     background-image: url("../images/img_bg_1.jpg");
+}
+main::before{
+    content: '';
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; 
+    background: rgba(0, 0, 0, 0.3);
 }
 .section{
     padding: 0 5%;
@@ -32,7 +44,7 @@ main .logo div{
 .main_text{
     font-family: "Work Sans", Arial, sans-serif;
     font-size: 60px;
-    font-weight: 100;
+    font-weight: 300;
     line-height: 1.5;
     color: #fff;
 
@@ -43,7 +55,7 @@ main .logo div{
 .main_p{
     font-family: "Work Sans", Arial, sans-serif;
     font-size: 20px;
-    font-weight: 100;
+    font-weight: 300;
     line-height: 1.5;
     color: #fff;
 
