--- a/style/style.css
+++ b/style/style.css
@@ -34,8 +34,6 @@ main .logo a{
     color: #fff;
     font-size: 25px;
     font-weight: bold;
-    /* logo */
-    border: solid #e36464;
 }
 main .logo div{
     display: flex;
@@ -70,18 +68,67 @@ main .logo div{
 .time{
     display: flex;
     justify-content: center;
+    padding: 20px 0;
 
     color:#fff;
     font-family: "Work Sans", Arial, sans-serif;
-    font-size: 20px;
+    font-size: 40px;
+}
+.time div{
+    margin: 0 10px;
+    padding: 20px 30px;
+    text-align: center;
+    background: rgb(43, 42, 42);
+    border-bottom: 2.5px solid #e36464;
 }
 .time div span{
-    color: grey
+    color: grey;
+    font-size: 20px;
 }
 .social_p{
     color:#fff;
+    font-size: 20px;
+    line-height: 1.5;
 }
 .social{
     flex-direction: column;
+}
+input{
+    margin: 0;
+    padding: 20px 0;
+    padding-right: 50px;
+    padding-left: 10px;
+    border: none;
+    border: solid 1px #fff;
+    border-radius: 5px;
+    outline: none;
+}
+button{
+    color: #fff;
+    font-family: "Work Sans", Arial, sans-serif;
+    margin: 0;
+    margin-left: -10px;
+    padding: 20px 10px;
+    background-color: #e36464;
+    /* border */
+    border: none;
+    border: solid 1px #e36464;
+    border-left: 0 solid #e36464;
+    border-radius: 5px;
+    border-top-left-radius: 0%;
+    border-bottom-left-radius: 0%;
+    outline: none;
+}
+.img{
+    display: grid;
+    grid-template-columns: 50fr 50fr 50fr 50fr;
+    text-align: center;
+}
+.img div img{
+    width:25px;
+    height: 25px;
+    margin: 30px 0;
+
+    /* margin: 20px 25%; */
 }
     
