--- a/style/style.css
+++ b/style/style.css
@@ -1,146 +1,5 @@
-body{
-    margin: 0;
-    padding: 0;
-}
-main{
-    position: relative;
-    z-index: 0;
-    background-image: url("../images/img_bg_1.jpg");
-}
-main::before{
-    content: '';
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%; 
-    background: rgba(0, 0, 0, 0.3);
-}
-.section{
-    padding: 0 5%;
-}
-.flex{
-    display: flex;
-    justify-content: center;
-}
-.logo{
-    padding-top: 50px;
-}
-main .logo a{
-    /* text */
-    font-family: "Work Sans", Arial, sans-serif;
-    text-decoration: none;
-    color: #fff;
-    font-size: 25px;
-    font-weight: bold;
-}
-main .logo div{
-    display: flex;
-    justify-content: center;  
-}
-.main_text{
-    font-family: "Work Sans", Arial, sans-serif;
-    font-size: 60px;
-    font-weight: 300;
-    line-height: 1.5;
-    color: #fff;
-
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;  
-}
-.main_p{
-    font-family: "Work Sans", Arial, sans-serif;
-    font-size: 20px;
-    font-weight: 300;
-    line-height: 1.5;
-    color: #fff;
-
-    margin-top: 50px;
-    display: flex;
-    justify-content: center; 
-}
-.main_p span{
-    color: #e36464;
-    padding-left: 5px;
-}
-.time{
-    display: flex;
-    justify-content: center;
-    padding: 20px 0;
-
-    color:#fff;
-    font-family: "Work Sans", Arial, sans-serif;
-    font-size: 40px;
-}
-.time div{
-    margin: 0 10px;
-    padding: 20px 30px;
-    text-align: center;
-    background: rgb(43, 42, 42);
-    border-bottom: 2.5px solid #e36464;
-}
-.time div span{
-    color: grey;
-    font-size: 20px;
-}
-.social_p{
-    color:#fff;
-    font-size: 20px;
-    line-height: 1.5;
-}
-.social{
-    flex-direction: column;
-}
-input{
-    margin: 0;
-    padding: 20px 0;
-    padding-right: 50px;
-    padding-left: 10px;
-    border: none;
-    border: solid 1px #fff;
-    border-radius: 5px;
-    outline: none;
-}
-button{
-    color: #fff;
-    font-family: "Work Sans", Arial, sans-serif;
-    margin: 0;
-    margin-left: -10px;
-    padding: 20px 10px;
-    background-color: #e36464;
-    /* border */
-    border: none;
-    border: solid 1px #e36464;
-    border-left: 0 solid #e36464;
-    border-radius: 5px;
-    border-top-left-radius: 0%;
-    border-bottom-left-radius: 0%;
-    outline: none;
-}
-.img{
-    display: grid;
-    grid-template-columns: 50fr 50fr 50fr 50fr;
-    text-align: center;
-}
-.img div img{
-    width:25px;
-    height: 25px;
-    margin: 30px 0;
-
-    /* margin: 20px 25%; */
-}
-footer p{
-    margin-top: 80px;
-    color: grey;
-    font-family: "Work Sans", Arial, sans-serif;
-    font-size: 15px;
-    text-align: center;
-}
-footer p span{
- color: #e36464;
-}
- .img_border{
- margin: auto 39%;
-}
+@import url(other/all.css)all;
+@import url(main/main.css)all;
+@import url(other/socialIcons/icons.css)all;
+@import url(other/socialIcons/icons.css)all;
+@import url(footer/footer.css)all;
