--- a/style/style.css
+++ b/style/style.css
@@ -3,3 +3,4 @@
 @import url(other/socialIcons/icons.css)all;
 @import url(other/socialIcons/icons.css)all;
 @import url(footer/footer.css)all;
+@import url(media/media.css)all;
