--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 @import url(other/all.css)all;
+@import url(fonts/fonts.css)all;
 @import url(main/main.css)all;
 @import url(other/socialIcons/icons.css)all;
 @import url(other/socialIcons/icons.css)all;
