--- a/style/main/main.css
+++ b/style/main/main.css
@@ -1,5 +1,6 @@
-@import url(logo/logo.css)all;
-@import url(background/background.css)all;
-@import url(data/data.css)all;
-@import url(header/header.css)all;
-@import url(form/form.css)all;
+@import url(all/all.css) all;
+@import url(logo/logo.css) all;
+@import url(background/background.css) all;
+@import url(data/data.css) all;
+@import url(header/header.css) all;
+@import url(form/form.css) all;
