--- a/style/main/data/data.css
+++ b/style/main/data/data.css
@@ -1,23 +1,31 @@
 .time{
     display: flex;
     justify-content: center;
-    padding: 20px 0;
-
+    padding-top: 20px;
+    text-transform: uppercase;
     color:#fff;
     font-family: "Work Sans", Arial, sans-serif;
     font-size: 40px;
+    margin-bottom: 50px;
 }
 .time div{
-    margin: 0 10px;
-    padding: 20px 30px;
+    height: 120px;
+    width: 110px;
+    margin: 0 7px;
     text-align: center;
-    background: rgb(43, 42, 42);
+    background: rgba(0, 0, 0, 0.2);
     border-bottom: 2.5px solid #e36464;
+    animation: pulse 1.01s ease infinite;
 }
 .time div span{
-    color: grey;
-    font-size: 20px;
+    color: rgba(255, 255, 255, 0.7);
+    text-transform: uppercase;
+    font-size: 12px;
+    margin: 0;
 }
 .time div p{
+    margin: 0;
+    margin-top: 15px;
+    margin-bottom: -10px;
     font-size: 40px;
 }
