--- a/style/main/form/input/input.css
+++ b/style/main/form/input/input.css
@@ -1,19 +1,21 @@
 input{
     margin: 0;
-    padding: 20px 0;
+    padding: 18px 0;
     padding-right: 50px;
-    padding-left: 10px;
+    padding-left: 20px;
     border: none;
     border: solid 1px #fff;
     border-radius: 5px;
     outline: none;
+    width: 340px;
 }
 button{
     color: #fff;
+    text-transform: uppercase;
     font-family: "Work Sans", Arial, sans-serif;
     margin: 0;
     margin-left: -10px;
-    padding: 20px 10px;
+    padding: 18px 20px;
     background-color: #e36464;
     /* border */
     border: none;
