--- a/style/other/socialIcons/icons.css
+++ b/style/other/socialIcons/icons.css
@@ -1,7 +1,7 @@
 
 .img{
     display: grid;
-    grid-template-columns: 50fr 50fr 50fr 50fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     text-align: center;
 }
 .img div img{
@@ -9,7 +9,15 @@
     height: 25px;
     margin: 30px 0;
 }
+.social-wight{
+    max-width: 200px;
+    margin: 0 auto;
+}
+.social-margin{
+    margin-top: 20px;
+    margin-bottom: 110px;
+}
 /* icons bottom */
 .img_border{
     margin: auto 39%;
-   }
+}
