--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,8 @@
-@import url(other/all.css)all;
-@import url(fonts/fonts.css)all;
-@import url(main/main.css)all;
-@import url(other/socialIcons/icons.css)all;
-@import url(other/socialIcons/icons.css)all;
-@import url(footer/footer.css)all;
-@import url(media/media.css)all;
+@import url(other/all.css) all;
+@import url(animate/animate.css) all;
+@import url(fonts/fonts.css) all;
+@import url(main/main.css) all;
+@import url(other/socialIcons/icons.css) all;
+@import url(other/socialIcons/icons.css) all;
+@import url(footer/footer.css) all;
+@import url(media/media.css) all;
