--- a/style/media/media.css
+++ b/style/media/media.css
@@ -1,3 +1,12 @@
+@media (max-width: 1100px) {
+    .main_text{
+        max-width: 650px;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 45px;
+        margin-bottom: 20px;
+    }
+}
 @media (max-width: 800px) {
     .section{
         padding: 0;
@@ -12,32 +21,60 @@
         margin: 10px 0;
     }
 }
-@media (max-width: 600px) {
-    .time{
+@media (max-width: 768px) {
+    form{
+        display: flex;
         flex-direction: column;
+        align-items: center;
+        width: 100%;
     }
-    .time div{
-        margin: 10px 25%;
+    input{
+        text-align: center;
+        width: 95%;
+        display: block;
+        border-radius: 0;
+        padding: 18px 0;
+        margin: 0;
+        margin-bottom: 5px;
     }
-}
-@media (max-width: 400px) {
-    .main_p{
-        font-size: 15px;
+    button{
+        margin-left: 0px;
+        border-radius: 0;
+        display: block;
+        width: 95%;
+        padding: 18px 0;
+    }
+    .img div img{
+        padding: 0 10px;
     }
     .main_text{
-        font-size: 25px;
+        font-size: 22px;
     }
+}
+@media (max-width: 600px) {
+    .time{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+    }
+    .time div{
+        margin-bottom: 20px;
+    }
+    .main_p{
+        font-size: 15px;
+        display: block;
+        text-align: center;
+        max-width: 300px;
+        margin: 0 auto;
+        margin-bottom: 30px;
+    }
+}
+@media (max-width: 400px) {    
     footer p{
         font-size: 10px;
     }
 }
 @media (max-width: 300px) {
-    .main_p{
-        font-size: 10px;
-    }
-    .main_text{
-        font-size: 15px;
-    }
     input {
         padding-right: 30px;
     }
